:icons: font

= Gentics Mesh Changelog

[[vNextMajorRelease]]
== Next Major Release

icon:plus[] Core: The OrientDB graph database will be updated to version 3.0

[[v0.16.1]]
== 0.16.1 (TBD)

icon:check[] Core: When the migration for multiple nodes faild during a schema migration the error details could become very long.
					This has been fixed now. Error details in the job list will be truncated after a certain amount of characters.

icon:check[] Core: Image transformation calls previously did not copy the image properties of the binary field. 
                   Instead the filename and other properties were not copied to the new binary image field. This has been fixed now.

icon:check[] Elasticsearch: Fixed handling of `search.url` settings which contained https URLs.

icon:check[] Core: Fixed deletion of mesh.token cookie on logout.

[[v0.16.0]]
== 0.16.0 (07.02.2018)

CAUTION: Search: The contents of HTML and HTML list fields will now automatically be stripped of markup prior of indexing.

CAUTION: The `mesh.yml` search section has been updated. The `search.url` property replaces the `search.hosts` property.

[source,json]
----
search:
  url: "http://localhost:9200"
  timeout: 8000
  startEmbedded: false
----

icon:plus[] GraphQL: The underlying graphql-java library was updated to version 7.0.

icon:check[] REST: An error which prevented the `/api/v1` info endpoint from returning version information has been fixed.

icon:plus[] OrientDB: The included OrientDB Studio has been updated to version 2.2.32.

icon:plus[] Config: It is now possible to configure the JVM arguments of the embedded Elasticsearch server via the `search.embeddedArguments` property.

icon:plus[] GraphQL: Schema fields can now be queried. Currently supported are `name`, `label`, `required` and `type`.

[[v0.15.0]]
== 0.15.0 (31.01.2018)
